--- a/web-static/TIH-Store-Page/styles.css
+++ b/web-static/TIH-Store-Page/styles.css
@@ -1,7 +1,7 @@
 /* Global Styles */
 :root {
-    --primary-color: #2c6e49;
-    --secondary-color: #4c956c;
+    --primary-color: #e0590b;
+    --secondary-color: #1a2720fb;
     --accent-color: #fefee3;
     --text-color: #333333;
     --light-color: #f8f9fa;
