--- a/web-static/Main/homePageText.css
+++ b/web-static/Main/homePageText.css
@@ -360,7 +360,7 @@ a {
 }
 
 .newsletter {
-  background: #f2dd96;
+  background: white;
   padding: 20px;
   text-align: center;
   border-radius: 10px;
@@ -390,7 +390,8 @@ a {
 }
 
 .newsletter button {
-  width: 100%;
+  width: 30%;
+  height: 40px;
   padding: 10px;
   margin-top: 10px;
   background-color: #d19336a3;
