--- a/web-static/Store/product.css
+++ b/web-static/Store/product.css
@@ -334,8 +334,8 @@ a {
 }
 
 .footer {
-  background-color: #b37400;
-  color: white;
+  background-color: rgb(233, 181, 129);
+  color: black;
   text-align: center;
   padding: 20px;
   position: relative;
@@ -354,14 +354,14 @@ a {
 }
 
 .footer-links a {
-  color: #bbb;
+  color: white;
   text-decoration: none;
   margin: 0 15px;
   font-size: 14px;
 }
 
 .footer-links a:hover {
-  color: white;
+  color: black;
 }
 
 .social-icons {
