--- a/web-static/Store/store.css
+++ b/web-static/Store/store.css
@@ -15,10 +15,10 @@ header {
   align-items: center;
   width: 100%;
   height: 100px;
-  margin-bottom: 200px;
+  margin-bottom: 100px;
   position: fixed;
   z-index: 1000;
-  margin-top: -30px;
+  margin-top: -10px;
   background-color: rgb(238, 193, 134);
 }
 
@@ -86,7 +86,7 @@ nav ul li a:hover {
   height: 50vh;
   color: black;
   text-align: center;
-  padding-top: 80px;
+  padding-top: 150px;
   font-size: 24px;
 }
 
@@ -235,7 +235,7 @@ nav ul li a:hover {
 /* Footer */
 
 .footer {
-  background-color: #b37400;
+  background-color: rgb(233, 181, 129);
   color: white;
   text-align: center;
   padding: 20px;
@@ -255,14 +255,14 @@ nav ul li a:hover {
 }
 
 .footer-links a {
-  color: #bbb;
+  color: white;
   text-decoration: none;
   margin: 0 15px;
   font-size: 14px;
 }
 
 .footer-links a:hover {
-  color: white;
+  color: black;
 }
 
 .social-icons {
