--- a/innovation_hub/webstore/templates/blog.html
+++ b/innovation_hub/webstore/templates/blog.html
@@ -51,7 +51,7 @@
             <span>🛠 Crafts</span> -->
           </div>
           <h2>Handmade pieces that took time to make</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+          <p>Discover the power of recycling in Art</p>
           <a href="#">Read more</a>
         </article>
 
