--- a/innovation_hub/webstore/templates/shop.html
+++ b/innovation_hub/webstore/templates/shop.html
@@ -41,116 +41,36 @@
                             <a href="#" class="add-to-cart"><i class="fas fa-shopping-cart"></i> add to Cart</a>
                         </div>
                     </div>
-                    <div class="shop-product-item">
-                        <div class="shop-product-img">
-                            <img src="/static/img/products/art-necklace.webp" alt="">
-                        </div>
-                        <div class="shop-product-meta">
-                            <h4 class="product-name">Product</h4>
-                            <p class="product-price">$10</p>
-                            <a href="#" class="add-to-cart"><i class="fas fa-shopping-cart"></i> add to Cart</a>
-                        </div>
-                    </div>
-                    <div class="shop-product-item">
-                        <div class="shop-product-img">
-                            <img src="/static/img/products/art-necklace.webp" alt="">
-                        </div>
-                        <div class="shop-product-meta">
-                            <h4 class="product-name">Product</h4>
-                            <p class="product-price">$10</p>
-                            <a href="#" class="add-to-cart"><i class="fas fa-shopping-cart"></i> add to Cart</a>
-                        </div>
-                    </div>
-                    <div class="shop-product-item">
-                        <div class="shop-product-img">
-                            <img src="/static/img/products/art-necklace.webp" alt="">
-                        </div>
-                        <div class="shop-product-meta">
-                            <h4 class="product-name">Product</h4>
-                            <p class="product-price">$10</p>
-                            <a href="#" class="add-to-cart"><i class="fas fa-shopping-cart"></i> add to Cart</a>
-                        </div>
-                    </div>
-                    <div class="shop-product-item">
-                        <div class="shop-product-img">
-                            <img src="/static/img/products/art-necklace.webp" alt="">
-                        </div>
-                        <div class="shop-product-meta">
-                            <h4 class="product-name">Product</h4>
-                            <p class="product-price">$10</p>
-                            <a href="#" class="add-to-cart"><i class="fas fa-shopping-cart"></i> add to Cart</a>
-                        </div>
-                    </div>
-                    <div class="shop-product-item">
-                        <div class="shop-product-img">
-                            <img src="/static/img/products/art-necklace.webp" alt="">
-                        </div>
-                        <div class="shop-product-meta">
-                            <h4 class="product-name">Product</h4>
-                            <p class="product-price">$10</p>
-                            <a href="#" class="add-to-cart"><i class="fas fa-shopping-cart"></i> add to Cart</a>
-                        </div>
-                    </div>
-                    <div class="shop-product-item">
-                        <div class="shop-product-img">
-                            <img src="/static/img/products/art-necklace.webp" alt="">
-                        </div>
-                        <div class="shop-product-meta">
-                            <h4 class="product-name">Product</h4>
-                            <p class="product-price">$10</p>
-                            <a href="#" class="add-to-cart"><i class="fas fa-shopping-cart"></i> add to Cart</a>
-                        </div>
-                    </div>
-                    <div class="shop-product-item">
-                        <div class="shop-product-img">
-                            <img src="/static/img/products/art-necklace.webp" alt="">
-                        </div>
-                        <div class="shop-product-meta">
-                            <h4 class="product-name">Product</h4>
-                            <p class="product-price">$10</p>
-                            <a href="#" class="add-to-cart"><i class="fas fa-shopping-cart"></i> add to Cart</a>
-                        </div>
-                    </div>
-                    <div class="shop-product-item">
-                        <div class="shop-product-img">
-                            <img src="/static/img/products/art-necklace.webp" alt="">
-                        </div>
-                        <div class="shop-product-meta">
-                            <h4 class="product-name">Product</h4>
-                            <p class="product-price">$10</p>
-                            <a href="#" class="add-to-cart"><i class="fas fa-shopping-cart"></i> add to Cart</a>
-                        </div>
-                    </div>
-                    <div class="shop-product-item">
-                        <div class="shop-product-img">
-                            <img src="/static/img/products/art-necklace.webp" alt="">
-                        </div>
-                        <div class="shop-product-meta">
-                            <h4 class="product-name">Product</h4>
-                            <p class="product-price">$10</p>
-                            <a href="#" class="add-to-cart"><i class="fas fa-shopping-cart"></i> add to Cart</a>
-                        </div>
-                    </div>
-                    <div class="shop-product-item">
-                        <div class="shop-product-img">
-                            <img src="/static/img/products/art-necklace.webp" alt="">
-                        </div>
-                        <div class="shop-product-meta">
-                            <h4 class="product-name">Product</h4>
-                            <p class="product-price">$10</p>
-                            <a href="#" class="add-to-cart"><i class="fas fa-shopping-cart"></i> add to Cart</a>
-                        </div>
-                    </div>
-                    <div class="shop-product-item">
-                        <div class="shop-product-img">
-                            <img src="/static/img/products/art-necklace.webp" alt="">
-                        </div>
-                        <div class="shop-product-meta">
-                            <h4 class="product-name">Product</h4>
-                            <p class="product-price">$10</p>
-                            <a href="#" class="add-to-cart"><i class="fas fa-shopping-cart"></i> add to Cart</a>
-                        </div>
-                    </div>
+                    {% for item in products %}
+                        {% if item.is_sale %}
+                            <div class="shop-product-item">
+                                <div class="shop-product-img">
+                                    <span class="sale-badge"><i class="fas fa-tags"></i> Sale</span>
+                                    <img src="{{ item.image.url }}" alt="">
+                                </div>
+                                <div class="shop-product-meta">
+                                    <h4>{{ item.name }}</h4>
+                                    <p class="product-price">
+                                        <strike style="color: #5ba515;">${{ item.price }}</strike>
+                                        &nbsp;
+                                        ${{ item.sale_price }}
+                                    </p>
+                                    <a href="#" class="add-to-cart"><i class="fas fa-shopping-cart"></i> add to Cart</a>
+                                </div>
+                            </div>
+                        {% else %}
+                            <div class="shop-product-item">
+                                <div class="shop-product-img">
+                                    <img src="{{ item.image.url }}" alt="">
+                                </div>
+                                <div class="shop-product-meta">
+                                    <h4>{{ item.name }}</h4>
+                                    <p class="product-price">${{ item.price }}</p>
+                                    <a href="#" class="add-to-cart"><i class="fas fa-shopping-cart"></i> add to Cart</a>
+                                </div>
+                            </div>
+                        {% endif %}
+                    {% endfor %}
                 </div>
             </div>
         </div>
