--- a/innovation_hub/webstore/static/styles/shop.css
+++ b/innovation_hub/webstore/static/styles/shop.css
@@ -64,7 +64,7 @@
 }
 .product-price {
     font-size: 20px;
-    font-weight: 700;
+    font-weight: 600;
     padding-bottom: 10px;
 }
 .product-name {
@@ -74,9 +74,34 @@
     font-weight: 500;
     font-size: 13px;
     border: 1px solid #5ba515;
-    background-color: #5ba515;
-    color: white;
+    /* background-color: #5ba515;
+    color: white; */
+    background-color: white;
+    color: green;
     padding: 10px 10px;
     letter-spacing: 0.6px;
     border-radius: 50px;
+    font-weight: 500;
+}
+/* sale badge */
+.sale-badge {
+    background: #ffffff;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: green;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-transform: uppercase;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    z-index: 10;
+    opacity: 1;
+}
+.sale-badge i {
+    font-size: 14px;
+}
+.shop-product-img {
+    position: relative;
 }
