--- a/innovation_hub/webstore/templates/layout.html
+++ b/innovation_hub/webstore/templates/layout.html
@@ -20,42 +20,7 @@
 </head>
 <body>
     <!-- header -->
-	<div class="top-header-area" id="sticker">
-		<div class="container">
-			<div class="row">
-				<div class="menu-content">
-					<div class="main-menu-wrap">
-						<!-- logo -->
-						<div class="site-logo">
-							<a href="{% url 'webstore:home' %}">
-								<img src="static/img/logo.png" alt="logo" width="100px">
-							</a>
-						</div>
-						<!-- logo -->
-						<!-- menu start -->
-						<nav class="main-menu">
-							<ul class="nav-link">
-								<li><a href="{% url 'webstore:home' %}">Home</a></li>
-								<li><a href="{% url 'webstore:about' %}">About</a></li>
-								<li><a href="{% url 'webstore:shop' %}">Shop</a></li>
-								<li><a href="{% url 'webstore:home' %}#blog">Blog</a></li>
-								<li><a href="{% url 'webstore:contact' %}">Contact</a></li>
-							</ul>
-                            <ul class="nav-icon">
-                                <li class="icons">
-									<div class="header-icons">
-										<a class="shopping-cart" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
-										<a class="search-bar-icon" href="#"><i class="fas fa-search"></i></a>
-									</div>
-								</li>
-                            </ul>
-						</nav>
-						<!-- menu end -->
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+    {% include 'header.html' %}
     <!-- end header -->
 
     <!-- hero -->
